@@ -226,35 +226,35 @@ class InnerClassForArrayCodeGeneratorTest {
                                 .paramComponentType(float.class) //
                                 .visibility(Visibility.PRIVATE) //
                                 .build(), //
-                        """
-                                public %1$s.ArrayFloats floats(
-                                    ) {
-                                  return new %1$s.ArrayFloats();
-                                }
-                                """.formatted(mockTypeName), //
-                        """
-                                public class ArrayFloats {
-                                  private java.util.List<java.lang.Float> list;
-                                                                
-                                  public %1$s.ArrayFloats add(
-                                      final float item) {
-                                    if (this.list == null) {
-                                      this.list = new java.util.ArrayList<>();
-                                    }
-                                    this.list.add(item);
-                                    %1$s.this.callSetterFor.floats = true;
-                                    return this;
-                                  }
-                                                                
-                                  public %1$s and(
-                                      ) {
-                                    if (this.list != null) {
-                                      %1$s.this.fieldValue.floats = list.toArray(new float[0]);
-                                    }
-                                    return %1$s.this;
-                                  }
-                                }
-                                """.formatted(mockTypeName)), //
+                        String.format(
+                                "public %1$s.ArrayFloats floats(\n" +
+                                "    ) {\n" +
+                                "  return new %1$s.ArrayFloats();\n" +
+                                "}\n",
+                                mockTypeName), //
+                        String.format(
+                                "public class ArrayFloats {\n" +
+                                "  private java.util.List<java.lang.Float> list;\n" +
+                                "\n" +
+                                "  public %1$s.ArrayFloats add(\n" +
+                                "      final float item) {\n" +
+                                "    if (this.list == null) {\n" +
+                                "      this.list = new java.util.ArrayList<>();\n" +
+                                "    }\n" +
+                                "    this.list.add(item);\n" +
+                                "    %1$s.this.callSetterFor.floats = true;\n" +
+                                "    return this;\n" +
+                                "  }\n" +
+                                "\n" +
+                                "  public %1$s and(\n" +
+                                "      ) {\n" +
+                                "    if (this.list != null) {\n" +
+                                "      %1$s.this.fieldValue.floats = list.toArray(new float[0]);\n" +
+                                "    }\n" +
+                                "    return %1$s.this;\n" +
+                                "  }\n" +
+                                "}\n",
+                                mockTypeName)), //
                 Arguments.of( //
                         BuilderMetadata.builder() //
                                 .packageName("ignored") //
@@ -271,35 +271,35 @@ class InnerClassForArrayCodeGeneratorTest {
                                 .paramComponentType(String.class) //
                                 .visibility(Visibility.PRIVATE) //
                                 .build(), //
-                        """
-                                public %1$s.ArrayStrings strings(
-                                    ) {
-                                  return new %1$s.ArrayStrings();
-                                }
-                                """.formatted(mockTypeName),
-                        """
-                                public class ArrayStrings {
-                                  private java.util.List<java.lang.String> list;
-                                                                
-                                  public %1$s.ArrayStrings add(
-                                      final java.lang.String item) {
-                                    if (this.list == null) {
-                                      this.list = new java.util.ArrayList<>();
-                                    }
-                                    this.list.add(item);
-                                    %1$s.this.callSetterFor.strings = true;
-                                    return this;
-                                  }
-                                                                
-                                  public %1$s and(
-                                      ) {
-                                    if (this.list != null) {
-                                      %1$s.this.fieldValue.strings = list.toArray(new java.lang.String[0]);
-                                    }
-                                    return %1$s.this;
-                                  }
-                                }
-                                """.formatted(mockTypeName)));
+                        String.format(
+                                "public %1$s.ArrayStrings strings(\n" +
+                                "    ) {\n" +
+                                "  return new %1$s.ArrayStrings();\n" +
+                                "}\n",
+                                mockTypeName),
+                        String.format(
+                                "public class ArrayStrings {\n" +
+                                "  private java.util.List<java.lang.String> list;\n" +
+                                "\n" +
+                                "  public %1$s.ArrayStrings add(\n" +
+                                "      final java.lang.String item) {\n" +
+                                "    if (this.list == null) {\n" +
+                                "      this.list = new java.util.ArrayList<>();\n" +
+                                "    }\n" +
+                                "    this.list.add(item);\n" +
+                                "    %1$s.this.callSetterFor.strings = true;\n" +
+                                "    return this;\n" +
+                                "  }\n" +
+                                "\n" +
+                                "  public %1$s and(\n" +
+                                "      ) {\n" +
+                                "    if (this.list != null) {\n" +
+                                "      %1$s.this.fieldValue.strings = list.toArray(new java.lang.String[0]);\n" +
+                                "    }\n" +
+                                "    return %1$s.this;\n" +
+                                "  }\n" +
+                                "}\n",
+                                mockTypeName)));
     }
 
     private static class MockType {
